# smart-resource-allocation

./: .firebaserc  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  FINAL_SUMMARY.txt  GOOGLE_SIGNIN_FIX.md  LICENSE  PHASE4-HANDOFF.md  PHASE4_COMPLETION_REPORT.md  README.md  READY_FOR_SUBMISSION.md  SUBMISSION_READINESS.md  deploy-phase4.sh  package-lock.json
.github/workflows/: ci.yml  firestore-setup-md
backend/: .dockerignore  .env.development  .env.example  .env.production  Dockerfile  cloudbuild.yaml  performance_test.py  pyproject.toml  seed_data.py
backend/app/: auth.py  config.py  database.py  main.py  models.py
backend/app/middleware/: auth.py
backend/app/services/: alerts.py  allocation_engine.py  analytics.py  area_analyzer.py  gemini.py  impact_reporter.py  nlp.py  notifications.py  predictor.py  storage.py  translation.py  vision.py
backend/functions/: main.py  requirements.txt
backend/scripts/: phase4-complete-guide-index.md  phase4-deployment-guide.md  phase4-master-checklist.md  phase4-quick-reference.md  phase4-submission-guide.md  phase4-testing-checklist.md  phase4-video-guide.md
backend/tests/: e2e_test.py  load_test.py  security_audit.py
frontend/: firebase-messaging-sw.js  package-lock.json  package.json  test.html
frontend/src/: App.tsx
frontend/src/components/: HeatMap.tsx  StatCard.tsx
frontend/src/hooks/: useAuth.ts
frontend/src/pages/: AllocatePage.tsx  AreaDetailPage.tsx  DashboardPage.tsx  ImpactPage.tsx  IngestPage.tsx  LoginPage.tsx  NeedsPage.tsx  ProgramsDetailPage.tsx  (+3 more)
functions/: main.py  requirements.txt
(+4 files in other folders)
