[tool.poetry]
name = "sra-backend"
version = "0.1.0"
description = "Smart Resource Allocation - AI-Powered Backend"
authors = ["Team SRA"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.42.0"}
python-dotenv = "^1.2.2"
google-cloud-firestore = "^2.26.0"
google-cloud-vision = "^3.12.1"
google-cloud-translate = "^3.24.0"
google-cloud-language = "^2.19.0"
google-cloud-storage = "^3.10.1"
firebase-admin = "^7.3.0"
python-multipart = "^0.0.22"
pydantic-settings = "^2.13.1"
google-genai = "^1.68.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"